# pganalytics_community

./: LICENSE  Makefile  README.md  shippable.yml  template_customer.sql
alertas/email/: clean_email_queue.sh  db_daemon.pl  email.html
coletor/: .gitignore  CMakeCompiler.txt  CMakeLists.txt  CPackConfig.cmake  Makefile  README.md  build_curl_static.md  pganalytics.sample.conf
coletor/cmake_addon/: FindPCRE.cmake  SelectRegexpLibrary.cmake  Toolchain-clang.cmake  Toolchain-mingw-w64.cmake  Toolchain-mingw32.cmake
coletor/include/: CMakeLists.txt  ConfigParser.h  DbConnection.h  Exceptions.h  LogManager.h  ServerInfo.h  SmartPtr.h  SmartPtrDebugger.h  StateManager.h  StorageManager.h  UserConfig.h  backend_shared.h  collectors.h  common.h  config.h.in  debug.h  getopt_long.h  pganalytics.h  push.h  win.h
coletor/include/backend/: LineHandler.h  LogParser.h  importer.h  poco_regexp.h
coletor/include/db/: AbstractDbHandlers.h  Database.h  DbExceptions.h  pq.h
coletor/include/util/: app.h  fs.h  log.h  streams.h  string.h  time.h
coletor/libs/: backupsnapshot.bat  backupsnapshot.sh
coletor/libs/libaws/: CMakeLists.txt  CMakeWindows.cmake  GIT_REF
coletor/libs/libaws/include/libaws/: common.h  config.h.in
coletor/libs/libaws/src/sdb/: sdbhandler.cpp
coletor/libs/libaws/src/win32/: CMakeLists.txt  win32_atoll.cpp  win32_atoll.h  win32_strptime.cpp
coletor/libs/win32/curl/: LIBCURL.EXP  LIBCURL.LIB  source
coletor/libs/win32/openssl/: source
coletor/pocs/: README.md
coletor/pocs/disphelper/samples_cpp/: wmi.cpp
coletor/pocs/win-stats/: Makefile  stats  stats.cpp
coletor/src/: CMakeLists.txt  ConfigParser.cpp  LogManager.cpp  ServerInfo.cpp  StateManager.cpp  StorageManager.cpp  UserConfig.cpp  collectors.cpp  collectors_sysstat.cpp  collectors_sysstat_win.cpp  pganalytics.cpp  push-curl-test.cpp  push.cpp  test-log.cpp
coletor/src/backend/: CMakeLists.txt  LogParser.cpp  pganalytics-imp-main.cpp  pganalytics-imp.cpp  poco_regexp.cpp  test.cpp  test_importer.cpp
coletor/src/util/: CMakeLists.txt  MainApplication.cpp  fs.cpp  fs_dirent.cpp  fs_stat.cpp  log.cpp  streams.cpp  string.cpp  time.cpp
coletor/src/win/: getopt_long.c  pganalytics.rc  stacktrace.cpp  win32error.cpp
coletor/src/win/agent/: CMakeLists.txt  pganalytics-agent.cpp  resource.h  systray-sample.cpp
coletor/tests/: CMakeLists.txt  command_output_check.cmake  process_test_suite.cmake  test.cpp  tests_utils.cmake
data_model/: 01_roles_and_database.sql
node_pga_2_0/: .bowerrc  .travis.yml  bower.json  karma.conf.js  package.json  pganalytics-server.js  shippable.yml  test.js  test.sh
node_pga_2_0/apache/: pganalytics.conf
node_pga_2_0/pga/service/: authService.js  cookieService.js  helloService.js  sqlService.js
node_pga_2_0/pga/site/: analise-sql.html  dashboard.html  index.html  login.html  resetpassword.html
node_pga_2_0/pga/site/bower_components/angular-datatables/: .bower.json
node_pga_2_0/pga/site/bower_components/datatables/: .bower.json
node_pga_2_0/pga/site/bower_components/datatables/media/js/: dataTables.bootstrap.js
node_pga_2_0/pga/site/bower_components/nvd3/: .bower.json
node_pga_2_0/pga/site/bower_components/pagedown/: .bower.json
node_pga_2_0/pga/site/bower_components/sideshow/: .bower.json
node_pga_2_0/pga/site/css/: basic.less  dashboard.less  datatables.less  login.less  navmenu.less  pga.css  pganalytics.css  sideshow.less
node_pga_2_0/pga/site/js/: bower.json  menu-hidder.js  utils.js
node_pga_2_0/pga/site/js/angular/: pga.setup.js
node_pga_2_0/pga/site/js/controllers/: dashboardController.js  loginController.js  mainController.js  resetPasswordController.js
node_pga_2_0/pga/site/js/directives/: widgetMain.js
node_pga_2_0/pga/site/js/graph/: pga.graph.js
node_pga_2_0/pga/site/js/services/: databaseService.js  genericService.js  googleAnalyticsService.js  i18nService.js
node_pga_2_0/pga/site/js/table/: pga.dataTableAnaliseSql.js  pga.dataTableEmpty.js  pga.dataTableGenericExhibition.js  pga.dataTableGenericInteraction.js
node_pga_2_0/pga/site/js/table/utils/: parseJsonToDataTable.js
node_pga_2_0/pga/site/js/tutorials/: introduction.js  presentation.js  sideshow.config.js
node_pga_2_0/pga/site/templates/: pgaChartDirective.html  pgaGaugeDirective.html  pgaTableDirective.html  pgaWidgetDirective.html
node_pga_2_0/pga/sql/: backup_details.sql  backup_list.sql  dashboard_cpuusage.sql  dashboard_diskusage.sql  diagnostics.sql  i18n_getall.sql  i18n_gethelp.sql  list_charts.sql  list_charts_recursive.sql  list_customer_schema.sql  list_customer_schema_by_user.sql  list_databases.sql  list_dates.sql  list_instances.sql  list_servers.sql  log_log1.sql  overview_alerts.sql  overview_alerts_by_job.sql  overview_alerts_by_server.sql  ovw_backup.sql  ovw_pg_uptime.sql  ovw_recomendation.sql  pglog_checkpoints.sql  pglog_duration_table.sql  pglog_messages.sql  pgstatements_detail_list.sql  pgstatements_detail_overview.sql  pgstatements_normalized_list.sql  pgstatements_overview.sql  pgstats_autovacuum_overview.sql  pgstats_autovacuum_tables.sql  pgstats_autovacuum_tables_details.sql  pgstats_checkpoints.sql  pgstats_databasesize.sql  pgstats_dbage.sql  pgstats_dbcacheratio.sql  pgstats_dbtempfilessize.sql  pgstats_dbtuples.sql  pgstats_globalcacheratio.sql  pgstats_indexsize.sql  (+32 more)
node_pga_2_0/pga/test/unit/: mainCtrl.spec.js  utilFormatter.spec.js
node_pga_2_0/pga/util/: auth.js  autoless.js  cookies.js  db.js  dbutil.js  email.js  i18n.js  server.js  util.js
node_pga_2_0/test/: helloTest.js  sqlTest.js  staticTest.js
node_pga_2_0/test/util/: testutil.js
scripts/: .s3cfg-sample  insertDiagnostic.sql  insertJob_sample.sql  insert_customer.sh  insert_missing_i18n_sql_keys.sh  pga_config.sh  purge_data.sh  refresh_materialized_views.sql  runpurge.sh
scripts/start_scripts/: pgaimporter  pm2-init.sh  postgresql
